# chronos

./: AGENT_OVERVIEW.md  ARCHITECTURE_GUIDE.md  CA_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  HANDOFF_GUIDE.md  HYPERVISOR_GUIDE.md  HYPERVISOR_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Implementation-plans.md  LANGUAGE_IMPROVEMENTS_IMPLEMENTED.md  Language-Improvements.md  Makefile  PROJECT_STATUS.md  README.md  REPL_ENHANCEMENT_PLAN.md  SHELL_FRAMEWORK.md  SHELL_IMPLEMENTATION_SUMMARY.md  TESTING.md  TEST_SUMMARY.md  THEOREM_PROVING_IMPROVEMENTS.md  TYPE_INFERENCE_IMPLEMENTED.md  demo.md  demo_enhanced_repl.md  hypervisor_demo_script.md  output.txt  test_improvements.cao  type_inference_test.cao
chronos-core/: Cargo.toml  README.md
chronos-core/examples/: basic_evaluation.rs
chronos-core/src/: core_lib.rs  error.rs  lexer.rs  lib.rs  types.rs  vm.rs
chronos-core/tests/: integration_test.rs
chronos-repl/: Cargo.toml  ENHANCED_VISUAL_INTERFACE_SUMMARY.md  EXAMPLE_TESTS_SUMMARY.md  README.md
chronos-repl/examples/: 00_overview.cao  01_basic_arithmetic.cao  02_conditionals.cao  03_algorithms.cao  04_data_types.cao  04_data_types.future  05_repl_features.cao  06_real_world_app.cao  README.md  basic_usage.rs  demo_display.rs  enhanced_display_demo.md  simple_01_basic_arithmetic.cao  simple_02_conditionals.cao
chronos-repl/src/: cellular_automata.rs  codd_ca.rs  codd_ca_backup.rs  codd_ca_enhanced.rs  codd_ca_enhanced_ui.rs  codd_game.rs  commands.rs  display.rs  error.rs  lib.rs  repl.rs  session.rs  tracing.rs
chronos-repl/tests/: example_integration_tests.rs  example_syntax_tests.rs  example_unit_tests.rs  mod.rs  working_examples_test.rs
docs/: CA_DEMO.md  CELLULAR_AUTOMATA.md  GRAMMAR.md  MODULARIZATION_PLAN.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md
examples/: axiom_systems.cao  cellular_automata_demo.rs  codd_ca_demo.rs  enhanced_codd_demo.rs  enhanced_repl_demo.txt  hypervisor_demo.rs  test_codd_commands.rs  theorem_proving_tutorial.cao  type_inference_demo.cao
sessions/: "demo_session".json  final-demo.json
src/: core_lib.rs  goal_builders.rs  hypervisor.rs  lexer.rs  lib.rs  main.rs  ordinal.rs  parser.rs  repl.rs  shell.rs  shell_manager.rs  test_new_features.rs  type_inference.rs  types.rs  vm.rs
